style work, fix some ui bugs on small screens

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -34,7 +34,6 @@ img{
 }
 .modal-body{
   background-color: #FFCCCD !important;
-  border-radius: 17.5px !important;
   box-shadow: 2px 3px 2px rgb(0 0 0 / 5%) !important; 
 }
 .card-text{
